--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,11 @@ a {
     color: #E5E7EB;
 }
 
-header{
+header, footer, main{
     background-color: #1F2937;
+    display: flex;
+    align-content: center;
+    justify-content: center;
 }
 
 .logo{
@@ -20,13 +23,48 @@ header{
     margin-right: 10%;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 a {
     padding: 0 12px;
 }
 
-.top{
+.sign-up{
+    padding: 5px 15px;
+    background-color: #3882F6;
+    border-radius: 5px;
+}
+
+.image-placeholder{
+    background-color: rgb(138, 138, 156);
     display: flex;
+    flex-shrink: 0;
+    height: 280px;
+    width: 480px;
+    margin-right: 10%;
+    margin-top: 10%;
+}
+
+h4 {
+    color: rgb(250, 234, 234);
+    align-self: center;
+    flex: auto;
+    text-align: center;
+}
+
+h1 {
+    font-size: 48px;
+    font-weight:bolder;
+}
+.secondary{
+    font-size: 18px;
+    color: #E5E7EB;
+}
+.hero{
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    margin: 0 10%;
 }
