--- a/styles.css
+++ b/styles.css
@@ -133,3 +133,25 @@ img, .item{
 .info{
     text-align: center;
 }
+
+.container{
+    background-color: #E5E7EB;
+    color:#1F2937;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+}
+
+.text{
+    text-align: center;
+    margin: 0 10%;
+    padding: 10%;
+    padding-bottom: 10px;
+    font-style: italic;
+}
+.author{
+    text-align: end;
+    margin: 0 10%;
+    padding-bottom: 10%;
+    font-weight:bold;
+}
